@@ -4,6 +4,9 @@ Change log for zeit.web
 2.13 (unreleased)
 -----------------
 
+- HOTFIX: Don't include view_name in the request timing metric names, since
+  that caused an explosion of metric names.
+
 - ZON-2246: Chronologische Artikel-Navigation
 
 - MAINT: Revert "ZON-2301: fix/adjust date_last_modified for HP"
